# geneGATer

./: .cruft.json  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  template_usage.md
docs/notebooks/: example.ipynb  geneGATer_tutorial.ipynb
src/geneGATer/: __init__.py
src/geneGATer/pl/: __init__.py  basic.py
src/geneGATer/pp/: __init__.py  basic.py  eval.py  loss.py
src/geneGATer/tl/: __init__.py  get_com_genes.py  main.py  models.py
tests/: test_basic.py
